2009-11-11  Jeremy Orlow  <jorlow@chromium.org>

        Not reviewed.  Build fix.  Will be cleaned up in subsequent patch once we know exaclty what's going on.

        * src/WebBindings.cpp:

2009-11-11  Drew Wilson  <atwilson@chromium.org>

        Reviewed by Dimitri Glazkov.

        SharedWorkerRepository.connect() does not call WebSharedWorkerRepository
        https://bugs.webkit.org/show_bug.cgi?id=31371

        Test: Unit tests can be enabled downstream when this lands.

        * src/SharedWorkerRepository.cpp:
        (WebCore::SharedWorkerRepository::connect):
        Added missing call to WebSharedWorkerRepository.addSharedWorker().

2009-11-11  Yaar Schnitman  <yaar@chromium.org>

        Reviewed by Dimitri Glazkov.

        Tiny path fixes in Chromium API includes.

        https://bugs.webkit.org/show_bug.cgi?id=31369

        * public/linux/WebSandboxSupport.h: Fixed path.
        * src/WebBindings.cpp: Fixed path.

2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        http://trac.webkit.org/changeset/50811 removed some methods from
        platform/network/SocketStreamHandleClient.h, so remove them
        here too.

        https://bugs.webkit.org/show_bug.cgi?id=31360

        * public/WebSocketStreamHandleClient.h:
        * src/SocketStreamHandle.cpp:
        (WebCore::SocketStreamHandleInternal::send):

2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Eric Seidel.

        Remove some additional references to dragSourceMovedTo() not
        needed after http://trac.webkit.org/changeset/50786.

        https://bugs.webkit.org/show_bug.cgi?id=31354

        * public/WebView.h:
        * src/WebViewImpl.h:

2009-11-11  Nate Chapin  <japhet@chromium.org>

        Reviewed by Dimitri Glazkov.

        Remove WebViewImpl::dragSourceMovedTo(), as it is no longer
        needed after http://trac.webkit.org/changeset/50786.

        https://bugs.webkit.org/show_bug.cgi?id=31354
