@@ -1,3 +1,14 @@
+2009-11-12  Nicolas Weber  <thakis@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Send |keypress()| events for keys with cmd down, like safari.
+        Test: Hit cmd-shift-a on unixpapa.com/js/testkey.html , should show a
+        keypress() event.
+
+        * src/mac/WebInputEventFactory.mm:
+        (WebKit::WebInputEventFactory::keyboardEvent):
+
 2009-11-11  Jeremy Orlow  <jorlow@chromium.org>
 
         Not reviewed.  Build fix.  Will be cleaned up in subsequent patch once we know exaclty what's going on.
